added the about us section

--- a/index.html
+++ b/index.html
@@ -118,12 +118,50 @@
               </svg>
             </a>
              </div>
-             
-
      </header>
 
      <!-- Main Section -->
       <main>
+        <!-- About Us section starts -->
+         <div>
+          <div>
+            <!-- Text content -->
+             <button class="btn">About Us</button>
+             <h2>We design thoughtful, liveable spaces</h2>
+             <p class="font-medium">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wool, sleek metal accents.</p>
+             <!-- Card 1 -->
+             <div>
+              <div>
+                <!-- Image content -->
+                 <img src="assets/commercial.png" alt="">
+              </div>
+              <div>
+                <!-- Text content -->
+                 <h3>Commercial</h3>
+                 <p class="font-medium">The barn house captivates with its blend of rustic charm and modern.</p>
+
+              </div>
+             </div>
+             <!-- Card 2 -->
+             <div>
+              <div>
+                <!-- Image content -->
+                 <img src="assets/residential.png" alt="">
+              </div>
+              <div>
+                <!-- Text content -->
+                 <h3>Residential</h3>
+                 <p class="font-medium">The barn house captivates with its blend of rustic charm and modern.</p>
+
+              </div>
+             </div>
+
+          </div>
+          <div>
+            <!-- Image content -->
+             <img src="assets/Rectangle.png" alt="">
+          </div>
+         </div>
 
       </main>
       <!-- Footer Section -->
