fixed the font-size, size of logo and buttons; completed the footer section and made it responsive

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
          <nav>
           <div class="navbar bg-base-100 mb-8">
             <div class="navbar-start">
-                <a href="#" class="rounded-3xl text-2xl font-extrabold">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5 bg-rinterio-primary rounded-full p-1 inline">
+                <a href="#" class="text-3xl font-extrabold">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 bg-rinterio-primary rounded-full p-1 inline">
                     <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
                   </svg>
                     Rinterio
@@ -81,8 +81,8 @@
                   <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
                 </svg>
               </a>
-              <a class="btn bg-rinterio-primary rounded-3xl font-extrabold text-sm">Book Consult
-                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5 bg-black rounded-full p-1 text-white">
+              <a class="btn bg-rinterio-primary rounded-3xl font-extrabold text-xl">Book Consult
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 bg-black rounded-full p-1 text-white">
                   <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
                 </svg>
               </a>
@@ -110,8 +110,8 @@
         <img class="mx-auto" src="./assets/banner.png" alt="">
         <h1 class="text-3xl md:text-6xl font-extrabold">A barn house of this design has a striking appearance</h1>
         <p class="font-medium">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wool, sleek metal and large windows that flood the space with natural light.</p>
-        <a class="btn btn-block mt-8 md:w-52 box-border bg-rinterio-banner rounded-3xl font-extrabold text-sm">View Details
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5 bg-rinterio-primary rounded-full p-1">
+        <a class="btn btn-block mt-8 md:w-52 box-border bg-rinterio-banner rounded-3xl font-extrabold text-xl">View Details
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 bg-rinterio-primary rounded-full p-1">
             <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
           </svg>
         </a>
@@ -245,8 +245,8 @@
                   <textarea class="textarea box-border w-full h-60 rounded-3xl bg-white" placeholder="Write your message here"></textarea>
             </div>
   
-            <a class="btn btn-block bg-rinterio-primary rounded-3xl font-extrabold text-sm">Send Mail
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5 bg-black rounded-full p-1 text-white">
+            <a class="btn btn-block bg-rinterio-primary rounded-3xl font-extrabold text-xl">Send Mail
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 bg-black rounded-full p-1 text-white">
               <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
             </svg>
           </a>
@@ -256,8 +256,37 @@
       </main>
 
       <!-- Footer Section -->
-       <footer>
+      <footer class=" bg-black text-white py-16 md:py-24 px-8">
+        <div class="footer footer-center">
+          <div class="md:w-1/2">
+            <a href="#" class="text-3xl font-extrabold">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 bg-rinterio-primary rounded-full p-1 inline text-black">
+              <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+            </svg>
+              Rinterio
+            </a>
+            <p class="font-medium mt-4">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wool, sleek metal accents.</p>
+          </div>
+         <nav class="my-8 md:my-12">
+          <ul class="flex flex-col md:flex-row gap-x-28 gap-y-8">
+            <li><a class="link link-hover">Home</a></li>
+              <li><a class="link link-hover">Services</a></li>
+              <li><a class="link link-hover">Portfolio</a></li>
+              <li><a class="link link-hover">Blogs</a></li>
+              <li><a class="link link-hover">Contact Us</a></li>
+          </ul>
+         </nav>
+            
+          <nav>
+              <a class="btn bg-rinterio-primary rounded-3xl font-extrabold text-xl">Book Consult
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 bg-black rounded-full p-1 text-white">
+                <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+              </svg>
+            </a>
+          </nav>
+        </div>
 
-       </footer>
+      </footer>
+      
 </body>
 </html>
