--- a/index.html
+++ b/index.html
@@ -135,26 +135,26 @@
              <h2 class="text-2xl md:text-4xl text-center md:text-left font-bold">We design thoughtful, liveable spaces</h2>
              <p class=" text-center md:text-left font-medium">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wool, sleek metal accents.</p>
              <!-- Card 1 -->
-             <div class="flex gap-6 p-6 bg-white rounded-2xl">
+             <div class="flex items-center gap-6 p-6 bg-white rounded-2xl">
               <div>
                 <!-- Image content -->
                  <img src="assets/commercial.png" alt="">
               </div>
               <div>
                 <!-- Text content -->
-                 <h3 class="md:text-lg font-extrabold mb-3">Commercial</h3>
+                 <h3 class="md:text-xl font-extrabold mb-2">Commercial</h3>
                  <p class="font-medium">The barn house captivates with its blend of rustic charm and modern.</p>
               </div>
              </div>
              <!-- Card 2 -->
-             <div class="flex gap-6 p-6 bg-white rounded-2xl">
+             <div class="flex items-center gap-6 p-6 bg-white rounded-2xl">
               <div>
                 <!-- Image content -->
                  <img src="assets/residential.png" alt="">
               </div>
               <div>
                 <!-- Text content -->
-                 <h3 class="md:text-lg font-extrabold mb-3">Residential</h3>
+                 <h3 class="md:text-xl font-extrabold mb-2">Residential</h3>
                  <p class="font-medium">The barn house captivates with its blend of rustic charm and modern.</p>
               </div>
              </div>
@@ -186,7 +186,7 @@
            <!-- Card 1 -->
             <div class="p-6 bg-card1 rounded-2xl">
                 <img src="assets/concept.png" alt="">
-                <h3 class="md:text-lg font-extrabold my-3">Concept</h3>
+                <h3 class="md:text-xl font-extrabold my-3">Concept</h3>
                 <p class="font-medium">The barn house captivates with its blend of rustic charm and modern.</p>
              </div>
             </div>
@@ -194,7 +194,7 @@
            <!-- Card 2 -->
             <div class="p-6 bg-card2 rounded-2xl">
                 <img src="assets/flow-chart.png" alt="">
-                <h3 class="md:text-lg font-extrabold my-3">Design Process</h3>
+                <h3 class="md:text-xl font-extrabold my-3">Design Process</h3>
                 <p class="font-medium">The barn house captivates with its blend of rustic charm and modern.</p>
              </div>
             </div>
@@ -202,7 +202,7 @@
            <!-- Card 3 -->
             <div class="p-6 bg-card3 rounded-2xl">
                 <img src="assets/vision.png" alt="">
-                <h3 class="md:text-lg font-extrabold my-3">Supervision</h3>
+                <h3 class="md:text-xl font-extrabold my-3">Supervision</h3>
                 <p class="font-medium">The barn house captivates with its blend of rustic charm and modern.</p>
              </div>
             </div>
@@ -210,12 +210,82 @@
            <!-- Card 4 -->
             <div class="p-6 bg-card4 rounded-2xl">
                 <img src="assets/budget-planning.png" alt="">
-                <h3 class="md:text-lg font-extrabold my-3">Budget Planning</h3>
+                <h3 class="md:text-xl font-extrabold my-3">Budget Planning</h3>
                 <p class="font-medium">The barn house captivates with its blend of rustic charm and modern.</p>
              </div>
             </div>
            </div>
        </section>
+
+       <!-- Portfolio section starts -->
+        <section class="mx-5 md:py-24 md:px-32 bg-white">
+          <div class="md:w-3/4 mx-auto mb-8 text-center space-y-6">
+            <!-- Text content -->
+            <button class="btn btn-sm bg-rinterio-secondary rounded-3xl">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+            </svg>
+            Explore Our Latest Works</button>
+            <h2 class="text-2xl md:text-4xl font-bold">Our Latest Portfolio</h2>
+               <p class="font-medium">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wool, sleek metal accents.</p>
+          </div>
+
+          <!-- Card container -->
+           <!-- Row 1 -->
+          <div class="flex flex-col md:flex-row gap-6">
+            <!-- Card 1 -->
+          <div class="flex-1 md:h-48 box-border flex flex-col md:flex-row items-center gap-6 p-6 bg-white rounded-2xl">
+            <div class="w-full h-full">
+              <!-- Image content -->
+               <img class="w-full h-full" src="assets/img1.png" alt="">
+            </div>
+            <div class="">
+              <!-- Text content -->
+               <h3 class="text-xl md:text-2xl font-extrabold">Commercial</h3>
+               <p class="font-medium mt-4 mb-5">The barn house captivates with its blend of rustic charm and modern.The barn house captivates with its blend of rustic charm and modern.</p>
+               <a href="#" class="font-extrabold md:text-xl">View Details
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 bg-rinterio-primary rounded-full p-1 inline">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                </svg>
+              </a>
+            </div> 
+           </div>
+          <!-- Card 2 -->
+          <div class="basis-1/4 md:h-48 p-6 rounded-2xl">
+               <img class="w-full h-full" src="assets/img2.png" alt="">
+           </div>
+           </div>
+
+           <!-- Row 2 -->  
+           <div class="flex flex-col md:flex-row-reverse gap-6">
+            <!-- Card 3 -->
+         <div class="flex-1 md:h-48 p-6 rounded-2xl">
+          <img class="w-full h-full" src="assets/img5.png" alt="">
+      </div>   
+         <!-- Card 4 -->
+         <div class="basis-2/4 md:h-48 box-border flex flex-col md:flex-row items-center gap-6 p-6 bg-white rounded-2xl">
+           <div class="w-full h-full">
+             <!-- Image content -->
+              <img class="w-full h-full" src="assets/img4.png" alt="">
+           </div>
+           <div class="">
+             <!-- Text content -->
+              <h3 class="text-xl md:text-2xl font-extrabold">Commercial</h3>
+              <p class="font-medium mt-4 mb-5">The barn house captivates with its blend of rustic charm and modern.</p>
+              <a href="#" class="font-extrabold md:text-xl">View Details
+               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 bg-rinterio-primary rounded-full p-1 inline">
+                 <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+               </svg>
+             </a>
+           </div> 
+          </div>
+          <!-- Card 5 -->
+          <div class="flex-1 md:h-48 p-6 rounded-2xl">
+            <img class="w-full h-full" src="assets/img3.png" alt=""> 
+        </div>
+           </div>
+        
+        </section>
 
        <!-- Let's Discuss section starts -->
         <section class="bg-discuss bg-no-repeat bg-cover py-8 md:py-24 px-6">
